apps/media/overseerr/deployment.yaml
#
# Reference:
# https://github.com/sct/overseerr
#

apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: overseerr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: overseerr
  type: ClusterIP
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: overseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: overseerr
    spec:
    restartPolicy: Always
    affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: overseerr
          image: sctx/overseerr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: overseerr-pvc
              mountPath: /app/config
      volumes:
        - name: overseerr-pvc
          persistentVolumeClaim:
            claimName: overseerr-pvc
