apps/media/overseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: overseerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`requests.saldivar.io`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: overseerr
          port: http
